--- a/day_of_the_week.html
+++ b/day_of_the_week.html
@@ -12,13 +12,13 @@
 
 
 <center>
-    <input type=button onClick="parent.location='building.html'" value='Sunday'>
-    <input type=button onClick="parent.location='building.html'" value='Monday'>
-    <input type=button onClick="parent.location='building.html'" value='Tuesday'>
-    <input type=button onClick="parent.location='building.html'" value='Wednesday'>
-    <input type=button onClick="parent.location='building.html'" value='Thursday'>
-    <input type=button onClick="parent.location='building.html'" value='Friday'>
-    <input type=button onClick="parent.location='building.html'" value='Saturday'>
+    <input type=button onClick="parent.location='table.html'" value='Sunday'>
+    <input type=button onClick="parent.location='table.html'" value='Monday'>
+    <input type=button onClick="parent.location='table.html'" value='Tuesday'>
+    <input type=button onClick="parent.location='table.html'" value='Wednesday'>
+    <input type=button onClick="parent.location='table.html'" value='Thursday'>
+    <input type=button onClick="parent.location='table.html'" value='Friday'>
+    <input type=button onClick="parent.location='table.html'" value='Saturday'>
 
 </center>
 
